--- a/JDanTang/podfile
+++ b/JDanTang/podfile
@@ -5,7 +5,6 @@ target 'JDanTang' do
 
 pod 'Alamofire'
 pod 'SwiftyJSON'
-
 pod 'Kingfisher'
 pod 'SnapKit'
 
@@ -14,5 +13,7 @@ pod 'FMDB'
 pod 'HLHanZiToPinYin'
 pod 'TZImagePickerController'
 pod 'IQKeyboardManager'
+pod 'SVProgressHUD'
+
 end
  
